Issue #3213987 by Agami4: UI - Menu item in secondary admin toolbar is not properly vertically aligned

--- a/styles/components/_toolbar-meta.scss
+++ b/styles/components/_toolbar-meta.scss
@@ -56,6 +56,7 @@
           color: var(--colorGinTextLight);
           width: 39px;
           height: 39px;
+          margin: 0;
           border-radius: $borderSmall $borderSmall 0 0;
 
           &:before {
